--- a/src/pages/styles/pages.css
+++ b/src/pages/styles/pages.css
@@ -11,6 +11,10 @@
 
 .main-content-wrapper {
   position: relative;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   height: 100%;
   margin-bottom: 70px;
 }
