--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -4,6 +4,7 @@ footer {
   align-items: center;
   justify-content: center;
   width: 100%;
+  position: relative;
   height: 70px;
   background-color: lightslategrey;
 }
