--- a/src/components/styles/MainLogo.css
+++ b/src/components/styles/MainLogo.css
@@ -24,13 +24,16 @@
 }
 
 .main-description {
-  font-size: 1rem;
+  text-align: center;
+  font-size: 1.8rem;
   color: rgb(68, 68, 68);
   font-weight: 300;
   margin-top: 10px;
+  text-wrap: balance;
+  word-break: keep-all;
 }
 
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   .main-logo-wrapper {
     margin-top: 100px;
   }
@@ -92,4 +95,4 @@
   .main-description {
     font-size: 1.7rem;
   }
-}
+} */
