--- a/src/components/styles/SearchBar.css
+++ b/src/components/styles/SearchBar.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  width: 380px;
 }
 
 .search-bar-wrapper {
@@ -15,6 +16,10 @@
   border: 1px solid gray;
   border-radius: 20px;
   margin-top: 30px;
+}
+
+.search-bar-wrapper:hover {
+  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
 }
 
 .search-bar-wrapper.isopen {
@@ -97,9 +102,8 @@
 
 .search-suggestion-wrapper {
   background-color: white;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
-  border-bottom: 1px solid gray;
+  border: 1px solid gray;
+  border-top: none;
   width: 100%;
   box-sizing: content-box;
 }
@@ -108,6 +112,7 @@
   cursor: pointer;
   /* border-bottom: 1px solid gray; */
   padding: 5px 5px 5px 25px;
+  font-size: 1.3rem;
   font-weight: 300;
 }
 
@@ -124,51 +129,11 @@
   font-weight: 500;
 }
 
-@media (max-width: 767px) {
-  .search-wrapper {
-    width: 300px;
-    font-size: 0.9rem;
-  }
-  .search-bar-wrapper {
-    height: 40px;
-  }
-  .search-bar-input {
-    font-size: 1rem;
-  }
-}
-@media (min-width: 767px) and (max-width: 991px) {
-  .search-wrapper {
-    width: 400px;
-    font-size: 1rem;
-  }
-  .search-bar-wrapper {
-    height: 50px;
-  }
-  .search-bar-input {
-    font-size: 1.2rem;
-  }
-}
-@media (min-width: 992px) and (max-width: 1199px) {
-  .search-wrapper {
-    width: 450px;
-    font-size: 1.2rem;
-  }
-  .search-bar-wrapper {
-    height: 50px;
-  }
-  .search-bar-input {
-    font-size: 1.4rem;
-  }
-}
-@media (min-width: 1200px) {
+@media screen and (min-width: 767px) {
   .search-wrapper {
     width: 500px;
-    font-size: 1.4rem;
   }
   .search-bar-wrapper {
-    height: 60px;
-  }
-  .search-bar-input {
-    font-size: 1.6rem;
+    height: 70px;
   }
 }
