--- a/src/index.css
+++ b/src/index.css
@@ -82,11 +82,8 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  font-family: "IBM Plex Sans KR", "Spoqa Han Sans", "Roboto", "Inter",
-    sans-serif;
 }
 
 ol,
@@ -112,7 +109,16 @@ table {
 body {
   margin: 0;
   padding: 0;
-  font-size: 20px;
+}
+
+html {
+  font-size: 15px;
   font-family: "IBM Plex Sans KR", "Spoqa Han Sans", "Roboto", "Inter",
     sans-serif;
+}
+
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 20px;
+  }
 }
