--- a/src/pages/styles/pages.css
+++ b/src/pages/styles/pages.css
@@ -1,20 +1,19 @@
-.main-wrapper {
+.page-wrapper {
   display: flex;
-  position: absolute;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
+  position: absolute;
   width: 100%;
   height: 100%;
   overflow-y: auto;
 }
 
 .main-content-wrapper {
-  position: relative;
-  flex-direction: column;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  position: relative;
+  width: 100%;
   height: 100%;
-  margin-bottom: 70px;
+  min-height: 500px;
 }
