detail page 추가 및 search bar 구분 구현 / TODO : home -> detail 시 넘겨받은 search 값 유지

--- a/src/components/styles/MainLogo.css
+++ b/src/components/styles/MainLogo.css
@@ -20,79 +20,22 @@
   font-weight: bold;
 
   text-overflow: clip;
-  white-space: norwap;
+  white-space: nowrap;
 }
 
 .main-description {
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1rem;
   color: rgb(68, 68, 68);
   font-weight: 300;
   margin-top: 10px;
-  text-wrap: balance;
-  word-break: keep-all;
+  text-overflow: clip;
+  white-space: nowrap;
 }
 
-/* @media (max-width: 767px) {
-  .main-logo-wrapper {
-    margin-top: 100px;
-  }
+@media screen and (max-width: 768px) {
   .main-logo {
-    width: 120px;
-    height: 120px;
-  }
-  .main-title {
-    font-size: 2.3rem;
-  }
-  .main-description {
-    font-size: 1rem;
+    width: 150px;
+    height: 150px;
   }
 }
-
-@media (min-width: 768px) and (max-width: 991px) {
-  .main-logo-wrapper {
-    margin-top: 70px;
-  }
-  .main-logo {
-    width: 160px;
-    height: 160px;
-  }
-  .main-title {
-    font-size: 2.5rem;
-  }
-  .main-description {
-    font-size: 1.3rem;
-  }
-}
-
-@media (min-width: 992px) and (max-width: 1199px) {
-  .main-logo-wrapper {
-    margin-top: 50px;
-  }
-  .main-logo {
-    width: 180px;
-    height: 180px;
-  }
-  .main-title {
-    font-size: 2.6rem;
-  }
-  .main-description {
-    font-size: 1.5rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .main-logo-wrapper {
-    margin-top: 40px;
-  }
-  .main-logo {
-    width: 200px;
-    height: 200px;
-  }
-  .main-title {
-    font-size: 3rem;
-  }
-  .main-description {
-    font-size: 1.7rem;
-  }
-} */
