--- a/src/components/styles/SearchBar.css
+++ b/src/components/styles/SearchBar.css
@@ -3,7 +3,17 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  width: 380px;
+}
+.search-wrapper.home {
+  width: 50%;
+  min-width: 330px;
+  max-width: 500px;
+}
+
+.search-wrapper.detail {
+  width: 80%;
+  min-width: 330px;
+  max-width: 700px;
 }
 
 .search-bar-wrapper {
@@ -15,11 +25,20 @@
   height: 60px;
   border: 1px solid gray;
   border-radius: 20px;
+}
+
+.search-bar-wrapper.home {
+  height: 50px;
   margin-top: 30px;
 }
 
-.search-bar-wrapper:hover {
-  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
+.search-bar-wrapper.detail {
+  height: 35px;
+  margin-top: 15px;
+}
+
+.search-bar-wrapper:focus-within {
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15);
 }
 
 .search-bar-wrapper.isopen {
@@ -39,8 +58,8 @@
   width: 100%;
   margin-left: 20px;
   margin-right: 100px;
-  font-size: 1.6rem;
-  font-family: "Sunflower", "Spoqa Han Sans", "Roboto", "Inter", sans-serif;
+  font-size: 1rem;
+  padding: 0;
 }
 
 .search-bar-input:focus {
@@ -106,13 +125,12 @@
   border-top: none;
   width: 100%;
   box-sizing: content-box;
+  font-size: 1rem;
 }
 
 .search-suggestion {
   cursor: pointer;
-  /* border-bottom: 1px solid gray; */
   padding: 5px 5px 5px 25px;
-  font-size: 1.3rem;
   font-weight: 300;
 }
 
@@ -127,13 +145,4 @@
 .search-suggestion:hover {
   text-decoration: underline;
   font-weight: 500;
-}
-
-@media screen and (min-width: 767px) {
-  .search-wrapper {
-    width: 500px;
-  }
-  .search-bar-wrapper {
-    height: 70px;
-  }
 }
