--- a/src/pages/styles/pages.css
+++ b/src/pages/styles/pages.css
@@ -17,3 +17,14 @@
   height: 100%;
   min-height: 500px;
 }
+
+.detail-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+}
