--- a/src/pages/styles/pages.css
+++ b/src/pages/styles/pages.css
@@ -28,3 +28,13 @@
   height: 100%;
   min-height: 500px;
 }
+
+.detail-search-list {
+  display: grid;
+  grid-template-columns: repeat(1fr, 1);
+  grid-template-rows: repeat(1fr, 5);
+  width: 80%;
+  min-width: 330px;
+  max-width: 700px;
+  height: 100%;
+}
