--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,7 @@ body {
 }
 
 html {
+  height: 100%;
   font-size: 15px;
   font-family: "IBM Plex Sans KR", "Spoqa Han Sans", "Roboto", "Inter",
     sans-serif;
