--- a/src/pages/styles/pages.css
+++ b/src/pages/styles/pages.css
@@ -1,18 +1,17 @@
 .page-wrapper {
   display: flex;
   flex-direction: column;
-  position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   overflow-y: auto;
 }
 
 .main-content-wrapper {
   display: flex;
+  flex: 1;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  position: relative;
   width: 100%;
   height: 100%;
   min-height: 500px;
@@ -20,21 +19,23 @@
 
 .detail-content-wrapper {
   display: flex;
+  flex: 1;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  position: relative;
   width: 100%;
   height: 100%;
-  min-height: 500px;
 }
 
 .detail-search-list {
   display: grid;
-  grid-template-columns: repeat(1fr, 1);
-  grid-template-rows: repeat(1fr, 5);
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 10px;
   width: 80%;
   min-width: 330px;
   max-width: 700px;
   height: 100%;
+
+  margin: 10px 0 10px 0;
 }
