Card 스타일 변경 / 데이터 베이스 변경

--- a/src/components/styles/SearchBar.css
+++ b/src/components/styles/SearchBar.css
@@ -138,12 +138,16 @@
   font-weight: 300;
 }
 
-.search-suggestion.yes {
-  background-color: lightgreen;
+.search-suggestion.safe {
+  background-color: seagreen;
 }
 
-.search-suggestion.no {
-  background-color: lightcoral;
+.search-suggestion.warning {
+  background-color: sandybrown;
+}
+
+.search-suggestion.danger {
+  background-color: crimson;
 }
 
 .search-suggestion:hover {
