--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -1,34 +1,41 @@
 .card-wrapper {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 200px;
-  border: 1px solid gray;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
   border-radius: 10px;
-  padding: 10px;
-  gap: 10px;
+  min-height: 150px;
+  box-sizing: border-box;
+  background-clip: border-box;
+  margin: 10px;
 }
 
-.card-isokay {
-  width: 30%;
-  height: 90%;
-  background-color: lightslategray;
-  border-radius: 10px;
+.card-wrapper.yes {
+  outline: 10px solid seagreen;
 }
 
-.card-text-wrapper {
-  width: 70%;
-  height: 90%;
-  border: 1px solid gray;
-  border-radius: 10px;
+.card-wrapper.caution {
+  outline: 10px solid sandybrown;
+}
+
+.card-wrapper.no {
+  outline: 10px solid crimson;
 }
 
 .card-text-title {
-  font-size: 1.5rem;
-  padding: 10px;
+  font-size: 1.3rem;
+  padding: 15px;
+  font-weight: bold;
+}
+
+.card-border {
+  width: 100%;
+  height: 1px;
+  background-color: black;
 }
 
 .card-text-description {
-  font-size: 1.2rem;
-  padding: 10px;
+  font-size: 1rem;
+  padding: 15px;
+  color: rgb(84, 84, 84);
 }
