--- a/src/pages/styles/pages.css
+++ b/src/pages/styles/pages.css
@@ -30,7 +30,6 @@
 .detail-search-list {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(5, 1fr);
   gap: 10px;
   width: 80%;
   min-width: 330px;
@@ -38,4 +37,10 @@
   height: 100%;
 
   margin: 10px 0 10px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .detail-search-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
