--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -8,34 +8,51 @@
   box-sizing: border-box;
   background-clip: border-box;
   margin: 10px;
+  position: relative;
+  color: #424242;
+}
+
+.card-wrapper:hover {
+  background-color: #ecebe7;
 }
 
 .card-wrapper.safe {
-  outline: 10px solid seagreen;
+  outline: 10px solid #8bc34a;
 }
 
 .card-wrapper.warning {
-  outline: 10px solid sandybrown;
+  outline: 10px solid #ffd54f;
 }
 
 .card-wrapper.danger {
-  outline: 10px solid red;
+  outline: 10px solid #ef5350;
+}
+
+.card-text-top {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 15px;
 }
 
 .card-text-title {
   font-size: 1.3rem;
-  padding: 15px;
   font-weight: bold;
+  color: #424242;
 }
 
 .card-border {
   width: 100%;
-  height: 1px;
-  background-color: black;
+  height: 2px;
+  background-color: #424242;
+}
+
+.card-text-bottom {
+  padding: 15px;
 }
 
 .card-text-description {
   font-size: 1rem;
-  padding: 15px;
-  color: rgb(84, 84, 84);
+  font-weight: 600;
+  color: #777777;
 }
