--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -4,8 +4,8 @@ footer {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 70px;
-  background-color: lightslategrey;
+  height: 50px;
+  background-color: #e0e0e0;
 }
 
 .footer-email-wrapper {
@@ -16,17 +16,25 @@ footer {
 }
 
 .footer-email {
-  color: white;
+  color: #424242;
   text-decoration: none;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
+  font-weight: 600;
   text-overflow: clip;
   white-space: nowrap;
 }
 
 .footer-copyright {
-  color: white;
-  font-size: 0.8rem;
+  color: #424242;
+  font-size: 0.7rem;
+  font-weight: 600;
   text-overflow: clip;
   white-space: nowrap;
   padding: 2px;
+}
+
+@media screen and (min-width: 768px) {
+  footer {
+    height: 60px;
+  }
 }
