--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -3,16 +3,16 @@ header {
   align-items: center;
   justify-content: flex-start;
   width: 100%;
-  height: 50px;
-  background-color: lightslategrey;
+  height: 60px;
+  background-color: #424242;
 }
 
 header > a {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 10px;
   border: none;
+  padding: 10px;
 }
 
 a {
@@ -25,22 +25,12 @@ a:visited {
 }
 
 .header-image {
-  width: 50px;
+  width: 200px;
   height: 50px;
-  background-color: lightcoral;
-  /* background-image: url("../../assets/logo.png"); */
-  margin-left: 5px;
-  background-size: cover;
+  background-image: url("@assets/logo1.png");
+  background-size: contain;
+  background-repeat: no-repeat;
   border: none;
   outline: none;
   box-shadow: none;
-}
-
-.header-title {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.header-title:visited {
-  text-decoration: none;
 }
