--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ body {
 html {
   height: 100%;
   font-size: 15px;
-  font-family: "IBM Plex Sans KR", "Spoqa Han Sans", "Roboto", "Inter",
+  font-family: "IBM Plex Sans KR", "Black Han Sans", "Roboto", "Inter",
     sans-serif;
 }
 
