--- a/src/pages/styles/pages.css
+++ b/src/pages/styles/pages.css
@@ -4,6 +4,7 @@
   width: 100%;
   min-height: 100vh;
   overflow-y: auto;
+  background-color: #faf9f6;
 }
 
 .main-content-wrapper {
@@ -15,6 +16,38 @@
   width: 100%;
   height: 100%;
   min-height: 500px;
+}
+
+.main-content-caution-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 50%;
+  min-width: 330px;
+  max-width: 500px;
+  margin-top: 20px;
+  padding: 15px 20px;
+
+  border: 1px solid #ff9800; /* 경고 느낌의 테두리 */
+  border-radius: 10px;
+
+  background-color: #fff3e0; /* 부드러운 주황 계열 배경으로 주의 환기 */
+  color: #424242;
+  font-size: 0.8rem;
+  font-weight: 600;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+}
+
+/* 선택적: 아이콘 추가 시 */
+.main-content-caution-wrapper::before {
+  content: "⚠️"; /* 경고 아이콘 */
+  margin-right: 10px; /* 텍스트와의 간격 */
+  font-size: 2rem;
+}
+
+.main-content-caution {
+  text-wrap: pretty;
 }
 
 .detail-content-wrapper {
