--- a/src/components/styles/MainLogo.css
+++ b/src/components/styles/MainLogo.css
@@ -9,7 +9,7 @@
 .main-logo {
   width: 200px;
   height: 200px;
-  background-image: url("@assets/logo2.png");
+  background-image: url("@assets/logo2.webp");
   background-size: contain;
   background-repeat: no-repeat;
 }
