--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -27,7 +27,7 @@ a:visited {
 .header-image {
   width: 200px;
   height: 50px;
-  background-image: url("@assets/logo1.png");
+  background-image: url("@assets/logo1.webp");
   background-size: contain;
   background-repeat: no-repeat;
   border: none;
