--- a/src/components/styles/NotFound.css
+++ b/src/components/styles/NotFound.css
@@ -18,7 +18,7 @@
   box-sizing: border-box;
   background-clip: border-box;
   margin: 10px;
-  outline: 10px solid lightslategray;
+  outline: 10px solid #424242;
   border-radius: 10px;
 }
 
