--- a/src/pages/styles/pages.css
+++ b/src/pages/styles/pages.css
@@ -7,7 +7,8 @@
   background-color: #faf9f6;
 }
 
-.main-content-wrapper {
+.main-content-wrapper,
+.policy-content-wrapper {
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -18,38 +19,15 @@
   min-height: 500px;
 }
 
-.main-content-caution-wrapper {
+.category-nav {
+  margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-
-  width: 50%;
-  min-width: 330px;
-  max-width: 500px;
-  margin-top: 20px;
-  padding: 15px 20px;
-
-  border: 1px solid #ff9800; /* 경고 느낌의 테두리 */
-  border-radius: 10px;
-
-  background-color: #fff3e0; /* 부드러운 주황 계열 배경으로 주의 환기 */
-  color: #424242;
-  font-size: 0.8rem;
-  font-weight: 600;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+  gap: 20px;
 }
 
-/* 선택적: 아이콘 추가 시 */
-.main-content-caution-wrapper::before {
-  content: "⚠️"; /* 경고 아이콘 */
-  margin-right: 10px; /* 텍스트와의 간격 */
-  font-size: 2rem;
-}
-
-.main-content-caution {
-  text-wrap: pretty;
-}
-
+.category-content-wrapper,
 .detail-content-wrapper {
   display: flex;
   flex: 1;
@@ -60,6 +38,7 @@
   height: 100%;
 }
 
+.category-search-list,
 .detail-search-list {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -69,10 +48,11 @@
   max-width: 700px;
   height: 100%;
 
-  margin: 10px 0 10px 0;
+  margin: 20px 0 20px 0;
 }
 
 @media screen and (min-width: 768px) {
+  .category-search-list,
   .detail-search-list {
     grid-template-columns: repeat(2, 1fr);
   }
