--- a/src/components/styles/CategoryMenu.css
+++ b/src/components/styles/CategoryMenu.css
@@ -3,8 +3,8 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   background-color: gray;
   border-radius: 50%;
 }
@@ -30,4 +30,11 @@
   font-size: 0.9rem;
   font-weight: 600;
   color: white;
+}
+
+@media screen and (min-width: 768px) {
+  .category-menu-wrapper {
+    width: 70px;
+    height: 70px;
+  }
 }
