--- a/src/components/styles/CategoryMenu.css
+++ b/src/components/styles/CategoryMenu.css
@@ -5,15 +5,16 @@
   text-align: center;
   width: 50px;
   height: 50px;
-  background-color: gray;
+  background-color: var(--color-primary-500);
   border-radius: 50%;
 }
 
 .category-menu-wrapper.active {
-  background-color: #424242;
+  background-color: var(--color-primary-950);
 }
 
 .category-menu-wrapper:hover {
+  background-color: var(--color-primary-950);
   box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.3);
 }
 
@@ -29,7 +30,7 @@
 .category-menu-go > span {
   font-size: 0.9rem;
   font-weight: 600;
-  color: white;
+  color: var(--color-font-bright);
 }
 
 @media screen and (min-width: 768px) {
