--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -4,7 +4,7 @@ header {
   justify-content: flex-start;
   width: 100%;
   height: 60px;
-  background-color: #424242;
+  background-color: var(--color-primary);
 }
 
 header > a {
