--- a/src/components/styles/SearchBar.css
+++ b/src/components/styles/SearchBar.css
@@ -24,9 +24,9 @@
   position: relative;
   width: 100%;
   height: 60px;
-  border: 1px solid gray;
+  border: 1px solid var(--color-primary-400);
   border-radius: 20px;
-  background-color: #faf9f6;
+  background-color: var(--color-background);
 }
 
 .search-bar-wrapper.home {
@@ -63,8 +63,8 @@
   font-size: 1rem;
   font-weight: bold;
   padding: 0;
-  background-color: #faf9f6;
-  color: #424242;
+  background-color: var(--color-background);
+  color: var(--color-primary);
 }
 
 .search-bar-input:focus {
@@ -101,11 +101,11 @@
 }
 
 .search-bar-input-reset:hover {
-  background-color: rgb(232, 232, 232);
+  background-color: var(--color-primary-200);
 }
 
 .search-bar-input-reset > svg {
-  color: gray;
+  color: var(--color-primary-500);
 }
 
 .search-bar-button {
@@ -121,12 +121,12 @@
 }
 
 .search-bar-button:hover {
-  background-color: rgb(232, 232, 232);
+  background-color: var(--color-primary-200);
 }
 
 .search-suggestion-wrapper {
-  background-color: white;
-  border: 1px solid gray;
+  background-color: var(--color-background);
+  border: 1px solid var(--color-primary-400);
   border-top: none;
   width: 100%;
   box-sizing: content-box;
@@ -141,19 +141,19 @@
   pointer-events: auto;
   padding: 5px 5px 5px 25px;
   font-weight: 600;
-  color: #424242;
+  color: var(--color-font-dark);
 }
 
 .search-suggestion.safe {
-  background-color: #8bc34a;
+  background-color: var(--color-safe);
 }
 
 .search-suggestion.warning {
-  background-color: #ffd54f;
+  background-color: var(--color-warning);
 }
 
 .search-suggestion.danger {
-  background-color: #ef5350;
+  background-color: var(--color-danger);
 }
 
 .search-suggestion:hover {
