--- a/src/components/styles/Tootip.css
+++ b/src/components/styles/Tootip.css
@@ -9,8 +9,8 @@
 
 .tooltip-box {
   position: absolute;
-  background-color: #333;
-  color: white;
+  background-color: var(--color-primary);
+  color: var(--color-font-bright);
   padding: 5px 10px;
   border-radius: 4px;
   font-size: 14px;
@@ -29,5 +29,5 @@
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: #333 transparent transparent transparent;
+  border-color: var(--color-primary) transparent transparent transparent;
 }
